게시판 수정 2

--- a/src/main/resources/templates/nav.mustache
+++ b/src/main/resources/templates/nav.mustache
@@ -15,20 +15,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                 <li class="nav-item ms-4 me-4">
                     <a id="test-menu" class="nav-link" href="/test">테스트</a>
                 </li>
-                <li class="nav-item dropdown ms-4 me-4">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        게시판
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="/posts-list">게시판</a></li>
-                    </ul>
-                </li>
+
                 <li class="nav-item ms-4 me-4">
-                    <a id="library-menu" class="nav-link" href="/">자료실</a>
+                  <a id="test-menu" class="nav-link" href="/question/list">게시판</a>
+
+                <li class="nav-item ms-4 me-4">
+                    <a id="library-menu" class="nav-link" href="/">길찾기</a>
                 </li>
             </ul>
             <div class="dropdown me-4">
